# joypad-backlog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.go  config.ini  generate_page.py  go.mod  lista.sh  main.go  parse.go  pyproject.toml  render.go  requirements.txt  template.html  webdav.go
playnite_page/: __init__.py  cli.py  config.py  default_template.html  parsers.py  render.py  utils.py  webdav.py
templates/: default.html
